<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.gaoyun.mfpit_fight.GameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score"
        android:id="@+id/scoreText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_score_num"
        android:gravity="center_horizontal"
        android:id="@+id/myScoreNumText"
        android:layout_below="@+id/scoreText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center"
        android:layout_toStartOf="@+id/scoreText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/opponent_score_num"
        android:textAlignment="center"
        android:id="@+id/opponentScoreNumText"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_above="@+id/textView4"
        android:layout_alignTop="@+id/myScoreNumText"
        android:layout_toEndOf="@+id/scoreText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/my_score"
        android:textAlignment="center"
        android:id="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/myScoreNumText"
        android:layout_toStartOf="@+id/scoreText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/opponent_score"
        android:textAlignment="center"
        android:id="@+id/textView5"
        android:layout_below="@+id/opponentScoreNumText"
        android:layout_alignEnd="@+id/opponentScoreNumText"
        android:layout_toEndOf="@+id/scoreText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_round"
        android:id="@+id/newRoundButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:background="@color/colorAccent"
        android:onClick="startRound"
        android:textColor="@color/colorWhiteBlue" />

</RelativeLayout>
